@@ -6,6 +6,8 @@ Broker:
 - Fix bridges potentially not connecting on Windows. Closes #478.
 - Fix clients authorised using `use_identity_as_username` or
   `use_subject_as_username` being disconnected on SIGHUP. Closes #1402.
+- Improve error messages in some situations when clients disconnect. Reduces
+  the number of "Socket error on client X, disconnecting" messages.
 
 Client library:
 - Fix reconnect backoff for the situation where connections are dropped rather
